--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <header class="aaa">
       <img src="./eisenhower-matrix.jpg">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="centered-main-page-element">
+    </header>
+    <main class="centered-main-page-element">
       <p id="topSectionForAddingElementToList">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -18,7 +18,7 @@
           <button>Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h2>Todo</h2>
       <ul id="incompleteTasks">
         <li>
           <input type="checkbox">
@@ -39,7 +39,7 @@
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h2>Completed</h2>
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
@@ -51,7 +51,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
